# Agentic-AI-for-Banking

./: README.md
usecases/Agent Development Kit/: .gitattributes  .gitignore  .secrets.baseline  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  pyproject.toml
usecases/Agent Development Kit/.github/: CODEOWNERS
usecases/Agent Development Kit/.sps/: Dockerfile  containerize.sh  release.sh  test.sh
usecases/Agent Development Kit/.sps/utils/: list-bom.sh  release-to-cp-registry.sh
usecases/Agent Development Kit/_docs/recommended-docker-settings/: coilma-settings.md  rancher-settings.md
usecases/Agent Development Kit/examples/agent_builder/customer_care/: import-all.sh  readme.md
usecases/Agent Development Kit/examples/agent_builder/customer_care_planner/: import-all.sh  readme.md
usecases/Agent Development Kit/examples/agent_builder/healthcare_provider/: import-all.sh
usecases/Agent Development Kit/examples/agent_builder/ibm_knowledge/: import_all.sh  remove_all.sh
usecases/Agent Development Kit/examples/evaluations/analysis/: README.md  summary_metrics.csv
usecases/Agent Development Kit/examples/evaluations/external_agent_validation/: README.md  sample.yaml
usecases/Agent Development Kit/examples/evaluations/generate/: README.md  data_simple.json  hr_agent.json  import-all.sh  stories.csv  tools.py
usecases/Agent Development Kit/examples/evaluations/hr_sample/: README.md  data_complex.json  data_simple.json  import-all.sh
usecases/Agent Development Kit/examples/flow_builder/collaborator_agents/: README.md  import-all.sh  main.py  remove-all.sh
usecases/Agent Development Kit/examples/flow_builder/extract_support_request/: README.md  import-all.sh  main.py  support_request.txt
usecases/Agent Development Kit/src/ibm_watsonx_orchestrate/: __init__.py
usecases/Agent Development Kit/tests/cli/: test_config.py
usecases/Agent Development Kit/tests/client/: test_client.py  test_local_service_instance.py  test_utils.py
usecases/Agent Development Kit/tests/core/: test_credentials.py
usecases/Agent Development Kit/tests/integration_tests/: Dockerfile  README.md  run_integration_tests.sh
usecases/Agent Development Kit/tests/mocks/: mock_base_api.py  mock_httpx.py  mock_typer.py
usecases/Agent Development Kit/tests/run/: test_run_connections.py
usecases/Agent Development Kit/tests/utils/: matcher.py
(+271 files in other folders)
